Set up the spring boot maven plugin